# ChangeLog for games-emulation/gnome-video-arcade
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  -gnome-video-arcade-0.5.6.ebuild, +gnome-video-arcade-0.6.1.ebuild:
  Bumped. Removed oldest ebuild.

  23 Apr 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.6.0.ebuild:
  Bumped.

  07 Apr 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.5.6.ebuild:
  Readded keywords.

  07 Apr 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.5.6.ebuild:
  Initial ebuild.
