@@ -1,5 +1,7 @@
 DIST gnome-video-arcade-0.6.0.tar.gz 979940 RMD160 c9f1828cf49f411daad1be2283c175b11e700b8c SHA1 a52f455b374c41f69ceb50e1b90dd60ec8995de6 SHA256 c169df5fca646d7237058131322e65a517d7c8adb0d81494238022858504af41
+DIST gnome-video-arcade-0.6.1.1.tar.gz 1000287 RMD160 c1594b56cc41e797a21301f4ea3a5ca560de34ac SHA1 19a230d2d2f4ca4c553fb647bc6037b471a0c755 SHA256 169fe9d3eb20bcd83aa0f76695b8727360122ba55f1efd8f1aeaa0dfd577493f
 DIST gnome-video-arcade-0.6.1.tar.gz 986211 RMD160 ae9cb5e4465885363a0fb705d852f88256a1ef49 SHA1 89f4dd01dd6ba9cb1e792679ad497a8a50cad402 SHA256 2b9919d19f0b60666dd981f170d1a17e27358f75b2bb3b3d1397bba5d7ce2ef8
 EBUILD gnome-video-arcade-0.6.0.ebuild 1178 RMD160 f56422398cc8a3cec0433c249b828fe69f69ccfa SHA1 258eb390eb5cf238548ae85737c071a339c41a57 SHA256 3b6a0ad47fe568c5e758b4c09de04bd37a92b62d572a1dde60034b3c44cddc11
+EBUILD gnome-video-arcade-0.6.1.1.ebuild 1178 RMD160 f56422398cc8a3cec0433c249b828fe69f69ccfa SHA1 258eb390eb5cf238548ae85737c071a339c41a57 SHA256 3b6a0ad47fe568c5e758b4c09de04bd37a92b62d572a1dde60034b3c44cddc11
 EBUILD gnome-video-arcade-0.6.1.ebuild 1178 RMD160 f56422398cc8a3cec0433c249b828fe69f69ccfa SHA1 258eb390eb5cf238548ae85737c071a339c41a57 SHA256 3b6a0ad47fe568c5e758b4c09de04bd37a92b62d572a1dde60034b3c44cddc11
-MISC ChangeLog 594 RMD160 5a5a5f8f56e95e723a3f6918b508e82fe802860f SHA1 2318f7a3d441dcc0a531ac3f84d9ac571e950052 SHA256 b22d036de6c17e03d07bcaa7173caa94ccc392cbc9fde27212ae395024e7b7c5
+MISC ChangeLog 692 RMD160 2e4f83e8e13ddb8cb9f981c2b12f463356010569 SHA1 95cb090335c06790ee24ea9168a3bf46297514bd SHA256 008d18ba6ed58db22404312b7450beafea80bfcfe685cd6c2bbd1cc00b875d37
